# zedex

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi.json
.github/: dependabot.yml
.github/workflows/: build-arm.yml  build.yml
src/: app.rs  cli.rs  main.rs
src/commands/: get.rs  mod.rs  release.rs  serve.rs
src/zed/: client.rs  downloader.rs  error.rs  extension.rs  health.rs  local_server.rs  mod.rs  version.rs
src/zed/server/: config.rs  mod.rs  state.rs
src/zed/server/handlers/: extensions.rs  mod.rs  proxy.rs  releases.rs
