[package]
name = "zedex"
version = "0.3.14"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
url = "2.4"
futures-util = "0.3"
actix-web = "4.11"
actix-files = "0.6"
env_logger = "0.11"
indicatif = "0.17.0"
log = "0.4"
chrono = "0.4"
semver = "1.0.22"
once_cell = "1.21.3"
